--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Understandig TypeScript</title>
-    <script src="app.js" defer></script>
+    <script src="dist/app.js" defer></script>
+    <script src="dist/analytics.js" defer></script>
 </head>
 <body>
-    <!-- DIV CONTENEDOR 1 -->    
+    <button>Click Me</button>  
 </body>
 </html>
